Fix T94888: LineArt use the same triangulation as viewport.

This fixes inconsistencies between line art output and viewport triangulation result.